Refactored player and settings css to app-content app-content css class is reusable throughout the app to get correct spacing for the content above the navigation

--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -21,14 +21,7 @@ html, body {
   flex-direction:column;
 }
 
-.player {
-  display:flex;
-  flex-direction:column;
-  height:90vh;
-  width:100%;
-}
-
-.upload {
+.app-content {
   display:flex;
   flex-direction:column;
   height:90vh;
